--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "firebase-chat-app",
   "version": "0.1.0",
   "private": true,
+  "author": "Aaron Lin",
+  "description": "A public chat room application that signed in users can communicate and share photos",
+  "keywords": [
+    "chat",
+    "chatroom",
+    "public",
+    "message",
+    "photo"
+  ],
+  "license": "MIT",
+  "version": "1.2.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
