--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebase-chat-app",
-  "version": "0.1.0",
+  "version": "1.2.0",
   "private": true,
   "author": "Aaron Lin",
   "description": "A public chat room application that signed in users can communicate and share photos",
@@ -12,11 +12,11 @@
     "photo"
   ],
   "license": "MIT",
-  "version": "1.2.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/emoji-mart": "^3.0.9",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.0",
     "react": "^17.0.2",
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "type-coverage": "type-coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +50,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
+    "type-coverage": "^2.21.0",
+    "typescript": "^4.6.2"
   }
 }
