--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/emoji-mart": "^3.0.9",
     "emoji-mart": "^3.0.1",
-    "firebase": "^9.6.0",
+    "firebase": "^9.6.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
@@ -56,6 +56,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "msw": "^0.39.1",
     "type-coverage": "^2.21.0",
     "typescript": "^4.6.2"
   }
