--- a/package.json
+++ b/package.json
@@ -56,8 +56,14 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "cz-conventional-changelog": "^3.3.0",
     "msw": "^0.39.1",
     "type-coverage": "^2.21.0",
     "typescript": "^4.6.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
