--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,40 @@
 .env.production.local
 .env
 
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
+firebase-debug.*.log*
 
-.firebase
-.github
+# Firebase cache
+.firebase/
+
+# Firebase config
 .firebaserc
-firebase.json
+
+.github
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
