--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,6 +51,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
+          args: deploy --only hosting --project aaronlin-project-chatroom
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
