--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,8 +49,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy --only hosting --project aaronlin-project-chatroom
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AARONLIN_PROJECT_CHATROOM }}'
+          channelId: live
+          projectId: aaronlin-project-chatroom
