chore: add information in package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "message",
     "photo"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Aaron-Lin-74/chatroom-project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Aaron-Lin-74/chatroom-project/issues"
+  },
+  "homepage":"https://github.com/Aaron-Lin-74/chatroom-project#readme",
   "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
