--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-icons": "^4.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -73,6 +73,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "msw": "^0.39.1",
     "prettier": "^2.6.2",
+    "ts-jest": "^27.1.4",
     "type-coverage": "^2.21.0",
     "typescript": "^4.6.2"
   },
